20200515_1826PM_America_Los_Angeles_

--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -46,7 +46,7 @@ wvAddSignal 	-win $$_nWave2 	-group {TB2 {/$(VERDIm3pwmA)/posST1[1]}}
 
 wvRenameGroup 	-win $$_nWave2 	G3 		 RTL1
 wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk50mhz}}
-wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clkM3}}
+wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk1Mhz}}
 
 wvRenameGroup 	-win $$_nWave2 	G4 		 M3real1
 wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3forceStop}}
