--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -28,25 +28,25 @@ VERICOMdefine:= +define+simulating=1
 define waveAddLine
 
 wvRenameGroup   -win $$_nWave2  G1 		TB1
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/clk}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/nRst}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/tp01}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/tp02}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/led4}}
+wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/clkR}}
+wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/nRstR}}
+wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/tp01w}}
+wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/tp02w}}
+wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/led4W}}
 
 wvRenameGroup   -win $$_nWave2  G2 		TB2
 wvAddSignal     -win $$_nWave2  -group {TB2 {/$(VERDItb)/error91}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/aHP}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/aLN}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bHP}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bLN}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cHP}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cLN}}
+wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/aHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/aLNw}}
+wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bLNw}}
+wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cLNw}}
 wvAddSignal 	-win $$_nWave2 	-group {TB2 {/$(VERDIm3pwmA)/posST1[1]}}
 
 wvRenameGroup 	-win $$_nWave2 	G3 		 RTL1
-wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk50mhz}}
-wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk1Mhz}}
+wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk50mhzI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk1MhzW}}
 
 wvRenameGroup 	-win $$_nWave2 	G4 		 M3real1
 wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3forceStop}}
@@ -81,12 +81,12 @@ wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgB)/lgForceLow}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgC)/lgForceLow}}
 
 wvRenameGroup   -win $$_nWave2  G7 		TB3
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/aHP}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/aLN}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/bHP}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/bLN}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cHP}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cLN}}
+wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/aHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/aLNw}}
+wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/bHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/bLNw}}
+wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cLNw}}
 
 
 wvRenameGroup 	-win $$_nWave2 	G8 		 M3real2
@@ -101,10 +101,10 @@ wvRenameGroup 	-win $$_nWave2 	G9		pwmAnalyze
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3pwmA)/pwm}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aHp}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aLp}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aHP}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aLN}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bHP}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bLN}}
+wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aHPw}}
+wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aLNw}}
+wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bHPw}}
+wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bLNw}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bHp}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bLp}}
 
