--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -4,9 +4,9 @@ DEV01:=xc3s500e-pq208-4
 CFGmakeRun:=Makefile.run.synopsysVERDI
 
 VERDItb:=motoro301_tb
-VERDIrtl:=$(VERDItb)/rtl
-VERDIussc:=$(VERDIrtl)/usTop
-VERDIucg:=$(VERDIussc)/ucg01
+VERDIrtl:=$(VERDItb)/rtlTop
+#VERDIussc:=$(VERDIrtl)/usTop
+#VERDIucg:=$(VERDIussc)/ucg01
 VERDIm3t:=$(VERDIrtl)/m3t
 VERDIm3r:=$(VERDIm3t)/r
 VERDIm3sg:=$(VERDIm3r)/sg
@@ -205,10 +205,10 @@ wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error92}}
 wvRenameGroup 	-win $$_nWave2 	G14 		 pwmERR
 wvAddSignal     -win $$_nWave2  -group {pwmERR {/$(VERDItb)/error91}}
 
-wvRenameGroup 	-win $$_nWave2 	G15 		 UStop
-wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIussc)/uTx}}
-wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIussc)/clkUtx}}
-wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIucg)/cnt}}
+#wvRenameGroup 	-win $$_nWave2 	G15 		 UStop
+#wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIussc)/uTx}}
+#wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIussc)/clkUtx}}
+#wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIucg)/cnt}}
 
 wvSelectAll
 wvSetRadix 		-win $$_nWave2 	-format UDec
