--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -49,10 +49,10 @@ wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk50mhzI}}
 wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk1MhzW}}
 
 wvRenameGroup 	-win $$_nWave2 	G4 		 M3real1
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3forceStop}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3invRotate}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/clk}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/nRst}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3forceStopI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3invRotateI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/clkI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/nRstI}}
 
 wvRenameGroup 	-win $$_nWave2 	G5 		 M3st1
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3stepA}}
@@ -90,23 +90,23 @@ wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cLNw}}
 
 
 wvRenameGroup 	-win $$_nWave2 	G8 		 M3real2
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/aHp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bHp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cHp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/aLp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bLp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cLp}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/aHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/aLpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bLpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cLpO}}
 
 wvRenameGroup 	-win $$_nWave2 	G9		pwmAnalyze
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3pwmA)/pwm}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aHp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aLp}}
+wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aLpO}}
 wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aHPw}}
 wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aLNw}}
 wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bHPw}}
 wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bLNw}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bHp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bLp}}
+wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bLpO}}
 
 wvRenameGroup 	-win $$_nWave2 	G10 		 pwm1
 wvAddSignal 	-win $$_nWave2 	-group 	{pwm1 {/$(VERDIm3pwmA)/pwm}}
@@ -197,8 +197,8 @@ wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/unknowN1}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmPOScnt}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmActive1}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmH1L0}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aHp}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aLp}}
+wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aLpO}}
 wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error91}}
 wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error92}}
 
