--- a/topDC/Makefile.env
+++ b/topDC/Makefile.env
@@ -1,4 +1,4 @@
-topModule:=motoro301_rtl_top
+topModule:=motor602_rtl_top
 topClk:=clk50mhzI
 
 #topModule:=led4
@@ -10,7 +10,7 @@ CFGmakeRun:=Makefile.run.synopsysDC
 
 #ttUCF:=ip2uart_top.ucf
 
-excludeSIMfileLists:= srcSYN/src9/motoro301_top.v
+excludeSIMfileLists:= srcSYN/src9/motor602_top.v
 
 #DCdefine:= +define+simulating=1
 #DCdefine:= -define simulating=1
