--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -1,9 +1,9 @@
-topModule:=motoro301_tb
+topModule:=motor602_tb
 DEV01:=xc3s500e-pq208-4
 
 CFGmakeRun:=Makefile.run.synopsysVERDI
 
-VERDItb:=motoro301_tb
+VERDItb:=motor602_tb
 VERDIrtl:=$(VERDItb)/rtlTop
 #VERDIussc:=$(VERDIrtl)/usTop
 #VERDIucg:=$(VERDIussc)/ucg01
@@ -42,7 +42,6 @@ wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bHPw}}
 wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bLNw}}
 wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cHPw}}
 wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cLNw}}
-wvAddSignal 	-win $$_nWave2 	-group {TB2 {/$(VERDIm3pwmA)/posST1[1]}}
 
 wvRenameGroup 	-win $$_nWave2 	G3 		 RTL1
 wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk50mhzI}}
@@ -55,24 +54,12 @@ wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/clkI}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/nRstI}}
 
 wvRenameGroup 	-win $$_nWave2 	G5 		 M3st1
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3stepA}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3stepB}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3stepC}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3cnt}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/roundCNT}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3r_stepCNT_speedSET}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3start}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3start_up1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3freqINC}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3freqDEC}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st1 {/$(VERDIm3sg)/m3start_clked1}}
 
 wvRenameGroup 	-win $$_nWave2 	G6 		 M3st2
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgA)/lgStep}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgA)/lgEE}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgB)/lgEE}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgC)/lgEE}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3pwmA)/pwm}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgA)/lgH1_L0}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgB)/lgH1_L0}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3st2 {/$(VERDIm3lgC)/lgH1_L0}}
@@ -98,7 +85,6 @@ wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bLpO}}
 wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cLpO}}
 
 wvRenameGroup 	-win $$_nWave2 	G9		pwmAnalyze
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3pwmA)/pwm}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aHpO}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aLpO}}
 wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aHPw}}
@@ -109,10 +95,6 @@ wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bHpO}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bLpO}}
 
 wvRenameGroup 	-win $$_nWave2 	G10 		 pwm1
-wvAddSignal 	-win $$_nWave2 	-group 	{pwm1 {/$(VERDIm3pwmA)/pwm}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwm1 {/$(VERDIm3pwmA)/pwmCNTreload1}}
-##wvAddSignal 	-win $$_nWave2 	-group 	{pwm1 {/$(VERDIm3pwmA)/pwmCNTreload2}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwm1 {/$(VERDIm3pwmA)/pwmCNT}}
 
 wvRenameGroup 	-win $$_nWave2 	G11 		 lCalc
 wvAddSignal     -win $$_nWave2  -group 	{lCalc {/$(VERDIm3pcA)/m3r_power_percent}}
@@ -131,72 +113,10 @@ wvAddSignal     -win $$_nWave2  -group 	{lCalc {/$(VERDIm3pcA)/m3r_stepSplitMax}
 wvAddSignal     -win $$_nWave2  -group 	{lCalc {/$(VERDIm3pcA)/pwmLENpos}}
 
 wvRenameGroup 	-win $$_nWave2 	G12 		 pwmSkip
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_Step11C}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_Step6B}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_minCheckMinX}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_minCheckExtXb}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_minCheckExtXc}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_minCheckExtX}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_lastPeriod}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSkip {/$(VERDIm3pwmA)/sR_runing0_noRun1}}
 
 wvRenameGroup 	-win $$_nWave2 	G13 		 pwmSgA
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/posSumExtA}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/posSumExtB}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/posSumExtC}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cntLast1}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cntLast2}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cntLast3}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cntFirst1}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cntFirst2}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cntFirst3}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCwant1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCreal1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCwant2}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCreal2}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCwant3}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCreal3}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCwant4}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCreal4}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posLost1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posLost2}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posLost3}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posLost4}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error91}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pcA)/m3LpwmSplitStep}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/sgStep}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/pwmLENpos}} 
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3r_pwmLenWant}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3r_pwmMinMask}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3r_stepSplitMax}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/pwm}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/m3cnt}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/pwmLastStep1}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/pwmLastStep2}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmCNT}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmCNTreload1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posStep}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posRemain1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmLENpos_clked1}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDIm3pwmA)/sgStep}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCwant1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posACCreal1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSum1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSum2}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSum3}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSum4}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSum5}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSum6}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/calcSumX}}
 
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posST1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/posLoad1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/remainLoad1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/unknowN1}}
 
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmPOScnt}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmActive1}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3pwmA)/pwmH1L0}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aHpO}}
 wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aLpO}}
 wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error91}}
@@ -205,10 +125,7 @@ wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error92}}
 wvRenameGroup 	-win $$_nWave2 	G14 		 pwmERR
 wvAddSignal     -win $$_nWave2  -group {pwmERR {/$(VERDItb)/error91}}
 
-#wvRenameGroup 	-win $$_nWave2 	G15 		 UStop
-#wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIussc)/uTx}}
-#wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIussc)/clkUtx}}
-#wvAddSignal     -win $$_nWave2  -group {UStop {/$(VERDIucg)/cnt}}
+wvRenameGroup 	-win $$_nWave2 	G15 		 UStop
 
 wvSelectAll
 wvSetRadix 		-win $$_nWave2 	-format UDec
