--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -4,11 +4,9 @@ DEV01:=xc3s500e-pq208-4
 CFGmakeRun:=Makefile.run.synopsysVERDI
 
 VERDItb:=motor602_tb
-VERDIrtl:=$(VERDItb)/rtlTop
-#VERDIussc:=$(VERDIrtl)/usTop
-#VERDIucg:=$(VERDIussc)/ucg01
-VERDIm3t:=$(VERDIrtl)/m3t
-VERDIm3r:=$(VERDIm3t)/r
+VERDIrtlTop:=$(VERDItb)/rtlTop
+VERDIm3top:=$(VERDIrtlTop)/m3top
+VERDIm3r:=$(VERDIm3top)/r
 
 waveAddLine:= wvAddAllSignals -win $$_nWave2
 
@@ -16,85 +14,73 @@ VERICOMdefine:= +define+simulating=1
 
 define waveAddLine
 
-wvRenameGroup   -win $$_nWave2  G1 		TB1
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/clkR}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/nRstR}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/tp01w}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/tp02w}}
-wvAddSignal     -win $$_nWave2  -group {TB1 {/$(VERDItb)/led4W}}
+wvRenameGroup 	-win $$_nWave2 	G1		TbMrMosCmp
+wvAddSignal 	-win $$_nWave2 	-group 	{TbMrMosCmp {/$(VERDIm3r)/aHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{TbMrMosCmp {/$(VERDIm3r)/aLpO}}
+wvAddSignal 	-win $$_nWave2  -group 	{TbMrMosCmp {/$(VERDItb)/aHPw}}
+wvAddSignal 	-win $$_nWave2  -group 	{TbMrMosCmp {/$(VERDItb)/aLNw}}
+wvAddSignal 	-win $$_nWave2  -group 	{TbMrMosCmp {/$(VERDItb)/bHPw}}
+wvAddSignal 	-win $$_nWave2  -group 	{TbMrMosCmp {/$(VERDItb)/bLNw}}
+wvAddSignal 	-win $$_nWave2 	-group 	{TbMrMosCmp {/$(VERDIm3r)/bHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{TbMrMosCmp {/$(VERDIm3r)/bLpO}}
 
-wvRenameGroup   -win $$_nWave2  G2 		TB2
-wvAddSignal     -win $$_nWave2  -group {TB2 {/$(VERDItb)/error91}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/aHPw}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/aLNw}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bHPw}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/bLNw}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cHPw}}
-wvAddSignal 	-win $$_nWave2  -group {TB2 {/$(VERDItb)/cLNw}}
+wvRenameGroup 	-win $$_nWave2 	G2 		 TbError9
+wvAddSignal 	-win $$_nWave2 	-group 	{TbError9 {/$(VERDIm3r)/aHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{TbError9 {/$(VERDIm3r)/aLpO}}
+wvAddSignal     -win $$_nWave2  -group 	{TbError9 {/$(VERDItb)/error91}}
+wvAddSignal     -win $$_nWave2  -group 	{TbError9 {/$(VERDItb)/error92}}
 
-wvRenameGroup 	-win $$_nWave2 	G3 		 RTL1
-wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk50mhzI}}
-wvAddSignal 	-win $$_nWave2 	-group 	{RTL1 {/$(VERDIrtl)/clk1MhzW}}
+wvRenameGroup   -win $$_nWave2  G3 		TbTestpoint1
+wvAddSignal     -win $$_nWave2  -group {TbTestpoint1 {/$(VERDItb)/clkR}}
+wvAddSignal     -win $$_nWave2  -group {TbTestpoint1 {/$(VERDItb)/nRstR}}
+wvAddSignal     -win $$_nWave2  -group {TbTestpoint1 {/$(VERDItb)/tp01w}}
+wvAddSignal     -win $$_nWave2  -group {TbTestpoint1 {/$(VERDItb)/tp02w}}
+wvAddSignal     -win $$_nWave2  -group {TbTestpoint1 {/$(VERDItb)/led4W}}
 
-wvRenameGroup 	-win $$_nWave2 	G4 		 M3real1
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3forceStopI}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/m3invRotateI}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/clkI}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real1 {/$(VERDIm3r)/nRstI}}
+wvRenameGroup   -win $$_nWave2  G4 		TbAbcHLw1
+wvAddSignal     -win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/error91}}
+wvAddSignal 	-win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/aHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/aLNw}}
+wvAddSignal 	-win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/bHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/bLNw}}
+wvAddSignal 	-win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/cHPw}}
+wvAddSignal 	-win $$_nWave2  -group {TbAbcHLw1 {/$(VERDItb)/cLNw}}
 
-wvRenameGroup   -win $$_nWave2  G5 		TB3
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/aHPw}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/aLNw}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/bHPw}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/bLNw}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cHPw}}
-wvAddSignal 	-win $$_nWave2  -group {TB3 {/$(VERDItb)/cLNw}}
+wvRenameGroup 	-win $$_nWave2 	G5 		 RtlClk01
+wvAddSignal 	-win $$_nWave2 	-group 	{RtlClk01 {/$(VERDIrtlTop)/nRstI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{RtlClk01 {/$(VERDIrtlTop)/clk50mhzI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{RtlClk01 {/$(VERDIrtlTop)/clk1MhzW}}
 
-wvRenameGroup 	-win $$_nWave2 	G6 		 M3real2
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/aHpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bHpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cHpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/aLpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/bLpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{M3real2 {/$(VERDIm3r)/cLpO}}
+wvRenameGroup 	-win $$_nWave2 	G6 		 MrPortAll
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/aHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/aLpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/bHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/bLpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/cHpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/cLpO}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3startI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3forceStopI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3invRotateI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3freqINCi}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3freqDECi}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3powerINCi}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3powerDECi}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/clkI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/nRstI}}
 
-wvRenameGroup 	-win $$_nWave2 	G7		pwmAnalyze
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aHpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/aLpO}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aHPw}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/aLNw}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bHPw}}
-wvAddSignal 	-win $$_nWave2  -group 	{pwmAnalyze {/$(VERDItb)/bLNw}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bHpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmAnalyze {/$(VERDIm3r)/bLpO}}
-
-wvRenameGroup 	-win $$_nWave2 	G8 		 pwmSgA
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aHpO}}
-wvAddSignal 	-win $$_nWave2 	-group 	{pwmSgA {/$(VERDIm3r)/aLpO}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error91}}
-wvAddSignal     -win $$_nWave2  -group 	{pwmSgA {/$(VERDItb)/error92}}
-
-wvRenameGroup 	-win $$_nWave2 	G9 		 pwmERR
-wvAddSignal     -win $$_nWave2  -group {pwmERR {/$(VERDItb)/error91}}
-
-wvRenameGroup 	-win $$_nWave2 	G10 		 UStop
+wvRenameGroup 	-win $$_nWave2 	G7 		 UStop
 
 wvSelectAll
 wvSetRadix 		-win $$_nWave2 	-format UDec
 wvDeselectAll
 
-wvCollapseGroup	pwmSkip
-wvCollapseGroup	TB1
-wvCollapseGroup	RTL1
-wvCollapseGroup	M3real1
-wvCollapseGroup	M3st1
-wvCollapseGroup	M3st2
-wvCollapseGroup	TB3
-wvCollapseGroup	M3real2
-wvCollapseGroup	pwmAnalyze
-wvCollapseGroup	pwm1
-wvCollapseGroup	lCalc
-wvCollapseGroup	pwmERR
+
+wvCollapseGroup	TbTestpoint1
+wvCollapseGroup	TbAbcHLw1
+wvCollapseGroup	RtlClk01
+wvCollapseGroup	MrPortAll
+wvCollapseGroup	TbMrMosCmp
+wvCollapseGroup	TbError9
 wvCollapseGroup	UStop
 
 
