--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -7,6 +7,7 @@ VERDItb:=motor602_tb
 VERDIrtlTop:=$(VERDItb)/rtlTop
 VERDIm3top:=$(VERDIrtlTop)/m3top
 VERDIm3r:=$(VERDIm3top)/r
+VERDIcalc:=$(VERDIm3r)/calc
 
 waveAddLine:= wvAddAllSignals -win $$_nWave2
 
@@ -68,7 +69,9 @@ wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/m3powerDECi}}
 wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/clkI}}
 wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/nRstI}}
 
-wvRenameGroup 	-win $$_nWave2 	G7 		 UStop
+wvRenameGroup 	-win $$_nWave2 	G7 		 Calc01
+wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/clkI}}
+wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/step}}
 
 wvSelectAll
 wvSetRadix 		-win $$_nWave2 	-format UDec
@@ -81,10 +84,10 @@ wvCollapseGroup	RtlClk01
 wvCollapseGroup	MrPortAll
 wvCollapseGroup	TbMrMosCmp
 wvCollapseGroup	TbError9
-wvCollapseGroup	UStop
+wvCollapseGroup	Calc01
 
 
 endef
 
 ### wvResizeWindow -win $$_nWave2 20 28 1800 980
-### wvSetRadix 		-format UDec {(UStop 3)}
+### wvSetRadix 		-format UDec {(Calc01 3)}
