--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -72,6 +72,8 @@ wvAddSignal 	-win $$_nWave2 	-group 	{MrPortAll {/$(VERDIm3r)/nRstI}}
 wvRenameGroup 	-win $$_nWave2 	G7 		 Calc01
 wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/clkI}}
 wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/step}}
+wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/remain}}
+wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/nextStep}}
 
 wvSelectAll
 wvSetRadix 		-win $$_nWave2 	-format UDec
@@ -84,7 +86,7 @@ wvCollapseGroup	RtlClk01
 wvCollapseGroup	MrPortAll
 wvCollapseGroup	TbMrMosCmp
 wvCollapseGroup	TbError9
-wvCollapseGroup	Calc01
+#wvCollapseGroup	Calc01
 
 
 endef
