--- a/topVERDI/Makefile.env
+++ b/topVERDI/Makefile.env
@@ -74,6 +74,8 @@ wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/clkI}}
 wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/step}}
 wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/remain}}
 wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/nextStep}}
+wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/sm}}
+wvAddSignal 	-win $$_nWave2 	-group 	{Calc01 {/$(VERDIcalc)/sm_next}}
 
 wvSelectAll
 wvSetRadix 		-win $$_nWave2 	-format UDec
